// Vitest Snapshot v1

exports[`Badge > color work 1`] = `
"<sup class=\\"ix-badge ix-badge-empty ix-badge-count ix-badge-hide-zero\\" style=\\"background-color: rgb(255, 0, 0);\\">
  <!---->
</sup>"
`;

exports[`Badge > count slot work 1`] = `"<span class=\\"ix-badge-wrapper\\"><!----><sup class=\\"ix-badge ix-badge-empty ix-badge-slot-count\\"><div class=\\"count-slot\\"></div></sup></span>"`;

exports[`Badge > count work 1`] = `"<sup class=\\"ix-badge ix-badge-empty ix-badge-count\\">10</sup>"`;

exports[`Badge > count work 2`] = `"<sup class=\\"ix-badge ix-badge-empty ix-badge-count\\">50</sup>"`;

exports[`Badge > count work 3`] = `"<sup class=\\"ix-badge ix-badge-empty ix-badge-count\\">1-1</sup>"`;

exports[`Badge > dot work 1`] = `
"<sup class=\\"ix-badge ix-badge-empty ix-badge-count ix-badge-hide-zero\\">
  <!---->
</sup>"
`;

exports[`Badge > dot work 2`] = `
"<sup class=\\"ix-badge ix-badge-empty ix-badge-dot\\">
  <!---->
</sup>"
`;

exports[`Badge > overflowCount work 1`] = `"<sup class=\\"ix-badge ix-badge-empty ix-badge-count\\">99+</sup>"`;

exports[`Badge > overflowCount work 2`] = `"<sup class=\\"ix-badge ix-badge-empty ix-badge-count\\">999+</sup>"`;

exports[`Badge > overflowCount work 3`] = `"<sup class=\\"ix-badge ix-badge-empty ix-badge-count\\">999+</sup>"`;

exports[`Badge > overflowCount work 4`] = `"<sup class=\\"ix-badge ix-badge-empty ix-badge-count\\">1000</sup>"`;

exports[`Badge > render work 1`] = `"<span class=\\"ix-badge-wrapper\\"><!----><sup class=\\"ix-badge ix-badge-empty ix-badge-count ix-badge-hide-zero\\"><!----></sup></span>"`;

exports[`Badge > showZero work 1`] = `
"<sup class=\\"ix-badge ix-badge-empty ix-badge-count ix-badge-hide-zero\\">
  <!---->
</sup>"
`;

exports[`Badge > showZero work 2`] = `"<sup class=\\"ix-badge ix-badge-empty ix-badge-count\\">0</sup>"`;
